# daily-hotspot-signal

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: sources.toml.example
src/hotspot_signal/: __main__.py  cli.py  config.py
src/hotspot_signal/data/: repository.py
src/hotspot_signal/domain/: models.py
src/hotspot_signal/notify/: feishu.py
src/hotspot_signal/report/: render.py
src/hotspot_signal/scheduler/: daily.py
src/hotspot_signal/sources/: collector.py  http.py  parsers.py
src/hotspot_signal/strategy/: scoring.py
src/hotspot_signal/utils/: dates.py  text.py
