[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-hotspot-signal"
version = "0.1.0"
description = "Daily low-competition hotspot topic discovery and report generator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
hotspot-signal = "hotspot_signal.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
